// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with props 1`] = `
<div>
  <div
    className="soft-sides flush-bottom push-double-top@lap-and-up"
  >
    <h4
      className="text-center flush-bottom"
    >
      Change Payment Account
    </h4>
  </div>
  <div
    className="soft-sides"
  >
    <div
      id={undefined}
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "position": "relative",
        }
      }
    >
      <div
        className="soft-ends push-double-left text-left hard-right outlined--light outlined--bottom relative"
      >
        <div
          className="display-inline-block soft-half-ends one-whole"
        >
          <h6
            className="flush-bottom float-left text-dark-tertiary"
          />
        </div>
        <h5
          className="hard one-whole flush-bottom text-dark-tertiary"
        >
          <span>
            ***
            1234
          </span>
          <span
            className="float-right soft-half-left"
          >
            <div
              className="background--fill display-inline-block"
              style={
                Object {
                  "backgroundImage": "url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAAA8CAYAAADxJz2MAAAABGdBTUEAALGPC/xhBQAAAc9JREFUeAHt3DFOwzAUxnGcROoMEx04Q4/AoSraoXMWqp4DjgFH4AwgdWvnDlV4FoyOn+xPlVrlnwEJ+32h/eWlcqjkcGfHbrd7Op1Or8MwPNuv8zjGMSqwDyF8tG27Wq/XP+Ef78vw7kcjTKQEDl3XLRrrvC14KR937OF8Pm8bK4u3LUeFQPzIa+zHY0WWyJ/APHYghyDQjWU3m00Ym5vieN/3Q+p904EplYIxAAuwUqUAplQKxgAswEqVAphSKRgDsAArVQpgSqVgDMACrFQpgCmVgrHRJxHvHGMrcy93rfO1T150oHhFAQRQFBDjdCCAooAYpwMBFAXEePU6sHbdJL7eq4tzC4uXBEAARQExTgcCKAqIcToQQFFAjNOBAIoCYrz6SeTS/5G+lScdbmGxAwEEUBQQ43QggKKAGKcDARQFxHj1OvBW1mmijxvnFnaJ8gUA5n3cWQBdonwBgHkfdxZAlyhfAGDex50F0CXKFwCY93FnAXSJ8gUA5n3cWQBdonxBuPR3G/k/f/uzdKB4DSPgXjzHlOP7xjaR+ZyygPLeo11jO/C82EkOyommmDW842w2WzVx+6K4A48NvBkEt7PfDXHrp3fDWyyXy+9ftplH0FR79EYAAAAASUVORK5CYII=')",
                  "borderRadius": "3px",
                  "height": "25px",
                  "position": "inherit",
                  "top": "3px",
                  "width": "40px",
                }
              }
            />
          </span>
        </h5>
      </div>
      <div
        className="locked-ends locked-sides"
      >
        <input
          checked={false}
          id="labelundefined"
          readOnly={true}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "padding": "50px",
              "position": "absolute",
              "top": 0,
            }
          }
          type="checkbox"
        />
        <label
          htmlFor="labelundefined"
          style={
            Object {
              "left": 0,
              "position": "absolute",
              "top": "50%",
            }
          }
        />
      </div>
    </div>
    <div
      id={undefined}
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "position": "relative",
        }
      }
    >
      <div
        className="soft-ends push-double-left text-left hard-right outlined--light outlined--bottom relative"
      >
        <div
          className="display-inline-block soft-half-ends one-whole"
        >
          <h6
            className="flush-bottom float-left text-dark-tertiary"
          />
        </div>
        <h5
          className="hard one-whole flush-bottom text-dark-tertiary"
        >
          <span>
            ***
            2345
          </span>
          <span
            className="float-right soft-half-left"
          >
            <div
              className="background--fill display-inline-block"
              style={
                Object {
                  "backgroundImage": "url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAAA8CAYAAADxJz2MAAAABGdBTUEAALGPC/xhBQAAAc9JREFUeAHt3DFOwzAUxnGcROoMEx04Q4/AoSraoXMWqp4DjgFH4AwgdWvnDlV4FoyOn+xPlVrlnwEJ+32h/eWlcqjkcGfHbrd7Op1Or8MwPNuv8zjGMSqwDyF8tG27Wq/XP+Ef78vw7kcjTKQEDl3XLRrrvC14KR937OF8Pm8bK4u3LUeFQPzIa+zHY0WWyJ/APHYghyDQjWU3m00Ym5vieN/3Q+p904EplYIxAAuwUqUAplQKxgAswEqVAphSKRgDsAArVQpgSqVgDMACrFQpgCmVgrHRJxHvHGMrcy93rfO1T150oHhFAQRQFBDjdCCAooAYpwMBFAXEePU6sHbdJL7eq4tzC4uXBEAARQExTgcCKAqIcToQQFFAjNOBAIoCYrz6SeTS/5G+lScdbmGxAwEEUBQQ43QggKKAGKcDARQFxHj1OvBW1mmijxvnFnaJ8gUA5n3cWQBdonwBgHkfdxZAlyhfAGDex50F0CXKFwCY93FnAXSJ8gUA5n3cWQBdonxBuPR3G/k/f/uzdKB4DSPgXjzHlOP7xjaR+ZyygPLeo11jO/C82EkOyommmDW842w2WzVx+6K4A48NvBkEt7PfDXHrp3fDWyyXy+9ftplH0FR79EYAAAAASUVORK5CYII=')",
                  "borderRadius": "3px",
                  "height": "25px",
                  "position": "inherit",
                  "top": "3px",
                  "width": "40px",
                }
              }
            />
          </span>
        </h5>
      </div>
      <div
        className="locked-ends locked-sides"
      >
        <input
          checked={false}
          id="labelundefined"
          readOnly={true}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "padding": "50px",
              "position": "absolute",
              "top": 0,
            }
          }
          type="checkbox"
        />
        <label
          htmlFor="labelundefined"
          style={
            Object {
              "left": 0,
              "position": "absolute",
              "top": "50%",
            }
          }
        />
      </div>
    </div>
    <button
      className="btn one-whole push-double-top soft-sides push-half-bottom"
      onClick={[Function]}
    >
      Save and Continue
    </button>
    <button
      className="btn--small btn--dark-tertiary one-whole soft-sides push-half-ends"
      onClick={[Function]}
    >
      Enter New Payment
    </button>
  </div>
</div>
`;

exports[`test should render with props 1`] = `
<div>
  <div
    className="soft-sides flush-bottom push-double-top@lap-and-up">
    <h4
      className="text-center flush-bottom">
      Change Payment Account
    </h4>
  </div>
  <div
    className="soft-sides">
    <div
      id={undefined}
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "position": "relative",
        }
      }>
      <div
        className="soft-ends push-double-left text-left hard-right outlined--light outlined--bottom relative">
        <div
          className="display-inline-block soft-half-ends one-whole">
          <h6
            className="flush-bottom float-left text-dark-tertiary" />
        </div>
        <h5
          className="hard one-whole flush-bottom text-dark-tertiary">
          <span>
            ***
            1234
          </span>
          <span
            className="float-right soft-half-left">
            <div
              className="background--fill display-inline-block"
              style={
                Object {
                  "backgroundImage": "url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAAA8CAYAAADxJz2MAAAABGdBTUEAALGPC/xhBQAAAc9JREFUeAHt3DFOwzAUxnGcROoMEx04Q4/AoSraoXMWqp4DjgFH4AwgdWvnDlV4FoyOn+xPlVrlnwEJ+32h/eWlcqjkcGfHbrd7Op1Or8MwPNuv8zjGMSqwDyF8tG27Wq/XP+Ef78vw7kcjTKQEDl3XLRrrvC14KR937OF8Pm8bK4u3LUeFQPzIa+zHY0WWyJ/APHYghyDQjWU3m00Ym5vieN/3Q+p904EplYIxAAuwUqUAplQKxgAswEqVAphSKRgDsAArVQpgSqVgDMACrFQpgCmVgrHRJxHvHGMrcy93rfO1T150oHhFAQRQFBDjdCCAooAYpwMBFAXEePU6sHbdJL7eq4tzC4uXBEAARQExTgcCKAqIcToQQFFAjNOBAIoCYrz6SeTS/5G+lScdbmGxAwEEUBQQ43QggKKAGKcDARQFxHj1OvBW1mmijxvnFnaJ8gUA5n3cWQBdonwBgHkfdxZAlyhfAGDex50F0CXKFwCY93FnAXSJ8gUA5n3cWQBdonxBuPR3G/k/f/uzdKB4DSPgXjzHlOP7xjaR+ZyygPLeo11jO/C82EkOyommmDW842w2WzVx+6K4A48NvBkEt7PfDXHrp3fDWyyXy+9ftplH0FR79EYAAAAASUVORK5CYII=')",
                  "borderRadius": "3px",
                  "height": "25px",
                  "position": "inherit",
                  "top": "3px",
                  "width": "40px",
                }
              } />
          </span>
        </h5>
      </div>
      <div
        className="locked-ends locked-sides">
        <input
          checked={false}
          id="labelundefined"
          readOnly={true}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "padding": "50px",
              "position": "absolute",
              "top": 0,
            }
          }
          type="checkbox" />
        <label
          htmlFor="labelundefined"
          style={
            Object {
              "left": 0,
              "position": "absolute",
              "top": "50%",
            }
          } />
      </div>
    </div>
    <div
      id={undefined}
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "position": "relative",
        }
      }>
      <div
        className="soft-ends push-double-left text-left hard-right outlined--light outlined--bottom relative">
        <div
          className="display-inline-block soft-half-ends one-whole">
          <h6
            className="flush-bottom float-left text-dark-tertiary" />
        </div>
        <h5
          className="hard one-whole flush-bottom text-dark-tertiary">
          <span>
            ***
            2345
          </span>
          <span
            className="float-right soft-half-left">
            <div
              className="background--fill display-inline-block"
              style={
                Object {
                  "backgroundImage": "url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAAA8CAYAAADxJz2MAAAABGdBTUEAALGPC/xhBQAAAc9JREFUeAHt3DFOwzAUxnGcROoMEx04Q4/AoSraoXMWqp4DjgFH4AwgdWvnDlV4FoyOn+xPlVrlnwEJ+32h/eWlcqjkcGfHbrd7Op1Or8MwPNuv8zjGMSqwDyF8tG27Wq/XP+Ef78vw7kcjTKQEDl3XLRrrvC14KR937OF8Pm8bK4u3LUeFQPzIa+zHY0WWyJ/APHYghyDQjWU3m00Ym5vieN/3Q+p904EplYIxAAuwUqUAplQKxgAswEqVAphSKRgDsAArVQpgSqVgDMACrFQpgCmVgrHRJxHvHGMrcy93rfO1T150oHhFAQRQFBDjdCCAooAYpwMBFAXEePU6sHbdJL7eq4tzC4uXBEAARQExTgcCKAqIcToQQFFAjNOBAIoCYrz6SeTS/5G+lScdbmGxAwEEUBQQ43QggKKAGKcDARQFxHj1OvBW1mmijxvnFnaJ8gUA5n3cWQBdonwBgHkfdxZAlyhfAGDex50F0CXKFwCY93FnAXSJ8gUA5n3cWQBdonxBuPR3G/k/f/uzdKB4DSPgXjzHlOP7xjaR+ZyygPLeo11jO/C82EkOyommmDW842w2WzVx+6K4A48NvBkEt7PfDXHrp3fDWyyXy+9ftplH0FR79EYAAAAASUVORK5CYII=')",
                  "borderRadius": "3px",
                  "height": "25px",
                  "position": "inherit",
                  "top": "3px",
                  "width": "40px",
                }
              } />
          </span>
        </h5>
      </div>
      <div
        className="locked-ends locked-sides">
        <input
          checked={false}
          id="labelundefined"
          readOnly={true}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "padding": "50px",
              "position": "absolute",
              "top": 0,
            }
          }
          type="checkbox" />
        <label
          htmlFor="labelundefined"
          style={
            Object {
              "left": 0,
              "position": "absolute",
              "top": "50%",
            }
          } />
      </div>
    </div>
    <button
      className="btn one-whole push-double-top soft-sides push-half-bottom"
      onClick={[Function]}>
      Save and Continue
    </button>
    <button
      className="btn--small btn--dark-tertiary one-whole soft-sides push-half-ends"
      onClick={[Function]}>
      Enter New Payment
    </button>
  </div>
</div>
`;
